[project]
name = "sjasoft-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samantha Atkins", email = "samantha@sjasoft.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "pytz>=2025.2",
    "validators>=0.35.0",
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
